fix: Idea ext run configurations.